k8s/deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: webflux-pod
  labels:
    app.kubernetes.io/name: webflux-pod
spec:
  containers:
    - name: server-webflux-k
      image: localhost:5000/server_webflux_k
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8081
          name: sr-webflux-svc
    - name: mysql-k
      image: localhost:5000/mysql_k
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 3306
          name: mysql-k-svc
      volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
    - name: mongo-k
      image: localhost:5000/mongo_k
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 27017
          name: mongo-k-svc
  volumes:
    - name: mysql
      emptyDir: { }

---
apiVersion: v1
kind: Service
metadata:
  name: server-webflux-k-service
spec:
  selector:
    run: webflux-pod
  ports:
    - name: name-of-service-port
      protocol: TCP
      port: 80
      targetPort: sr-webflux-svc

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      targetPort: mysql-k-svc
