k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
    - host: webflux.me
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: server-webflux-k-service
                port:
                  number: 80
status:
  loadBalancer:
    ingress:
      - hostname: webflux
